Revision 30
-----------
- Made LOLCode IRCSPECZ compliant - see http://forum.lolcode.com/viewtopic.php?id=108
- Improved string parsing - LOLCode.net now accepts strings with any of the escape sequences
  accepted by C#
- Fixed a bug with lolc's handling of relative paths
- Assorted internal refactoring

Revision 18
-----------
- Assorted optimisations to the generated IL
- Command line support for lolc added - still preliminary, some options will not have any
  effect. Note that builds default to release now, to make a debug build, you will have to
  specify /debug+.
- Fixed printing of arrays using VISIBLE so it adheres to the standard.
- Improved compiler error reporting substantially.
- Added README and CHANGELOG to the package.

Revision 8
----------
- Fixed string comparison code

Revision 1
----------
- Initial public release